--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "description": "A application to model an address book build with Node",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "export NODE_ENV=test && jasmine"
   },
   "author": "Caleb Trachte",
   "license": "ISC",
   "dependencies": {
     "inquirer": "^5.1.0"
+  },
+  "devDependencies": {
+    "jasmine": "^3.1.0"
   }
 }
